# covid19-alarm

./: .gitignore  .pylintrc  Makefile  README.md  config.json  covid_brief_backend.sublime-project  pyproject.toml
server/: __init__.py  http_response.py
server/api/: covid.py  news.py  weather.py
server/api/__tests__/: test_covid.py  test_news.py  test_weather.py
server/routes/: __init__.py
server/routes/alarms/: alarm_scheduler.py  daily_brief.py  notification.py  route.py
server/routes/alarms/__tests__/: test_daily_brief.py  test_notifications.py
server/utils/: logger.py
